# ai-rag-template

./: .gitignore  .gitlab-ci.yml  .pylintrc  CHANGELOG.md  Dockerfile  Makefile  README.md  azure-pipelines.yml  default.configuration.json  default.env  pyproject.toml  requirements.txt  ruff.toml
.github/: dependabot.yml
.github/workflows/: dependency-review.yml  release.yml  security.yml  test-and-build.yml  test-rond.yml  test.yml
.mia-template/: README.md
docs/: 10_Overview_And_Usage.md  20_APIs.md  architecture.drawio  chain.drawio
src/: app.py  constants.py  context.py
src/api/middlewares/: app_context_middleware.py  logger_middleware.py
src/api/schemas/: chat_completion_schemas.py  embeddings_schemas.py  status_ok_schema.py
src/application/assistance/: logs-rag.txt  service.py
src/application/assistant/: assistant_service.py
src/application/embeddings/: document_chunker.py  embedding_generator.py  embedding_service.py  errors.py  file_parser.py  hyperlink_parser.py
src/configurations/: configuration.py  service_config.json  service_model.py  variables.py  variables_model.py
src/infrastracture/: logger.py
src/infrastracture/config_manager/: config_manager.py  errors.py
src/infrastracture/embeddings_manager/: embeddings_manager.py  errors.py
src/infrastracture/env_vars_manager/: env_vars_manager.py  errors.py
src/infrastracture/llm_manager/: errors.py  llm_manager.py
src/infrastracture/metrics/: manager.py
src/lib/: vector_search_index_updater.py
tests/: conftest.py  context_test.py
tests/fixtures/: app_context.py  clear_prometheus.py  logger.py  mock_server.py  test_client.py
tests/src/configurations/: configuration_test.py  (+1 more)
utils/: chat.py
(+81 files in other folders)
